first draft of analysis 1 chapter, first 5.1 fb of 8 TeV data

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1282,3 +1282,131 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       number        = "CMS-PAS-PFT-10-002",
       year          = "2010",
 }
+
+@article{Agashe:2014kda,
+      author         = "Olive, K.A. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin.Phys.",
+      volume         = "C38",
+      pages          = "090001",
+      doi            = "10.1088/1674-1137/38/9/090001",
+      year           = "2014",
+      SLACcitation   = "%%CITATION = CHPHD,C38,090001;%%",
+}
+
+@misc{METfilters,
+      title = {MET Optional Filters},
+      howpublished = {\url{https://twiki.cern.ch/twiki/bin/view/CMS/MissingETOptionalFilters}}
+}
+
+@article{CMS:2011esa,
+      key            = "925240",
+      title          = "{Jet Energy Resolution in CMS at sqrt(s)=7 TeV}",
+      collaboration  = "CMS",
+      year           = "2011",
+      reportNumber   = "CMS-PAS-JME-10-014",
+      SLACcitation   = "%%CITATION = CMS-PAS-JME-10-014 ETC.;%%",
+}
+
+@misc{btagOP,
+      title = {Operating Points for $b$-Tag Algorithms},
+      howpublished = {\url{https://twiki.cern.ch/twiki/bin/viewauth/CMS/BTagPerformanceOP}}
+}
+
+@misc{btagSF,
+      title = {$b$-Tag Scale Factor Uncertainties},
+      howpublished = {\url{https://twiki.cern.ch/twiki/bin/viewauth/CMS/BtagPOG}}
+}
+
+@techreport{Weiser:927399,
+      author        = "Weiser, Christian",
+      title         = "{A Combined Secondary Vertex Based B-Tagging Algorithm in
+                       CMS}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-NOTE-2006-014",
+      month         = "Jan",
+      year          = "2006",
+}
+
+@article{CMS-PAS-BTV-11-004,
+      title        = "b-Jet Identification in the CMS Experiment",
+      URL          = "http://cdsweb.cern.ch/record/1427247",
+      year         = "2012",
+}
+
+@techreport{CMS-AN-2012-181,
+      author      = "{VHbb Team}",
+      title       = "Search for the SM Higgs Boson Produced in Association with W or Z and Decaying to Bottom Quarks (ICHEP 2012)",
+      url         = "http://cms.cern.ch/iCMS/jsp/db_notes/noteInfo.jsp?cmsnoteid=CMS\%20AN-2012/181",
+      type     = "CMS Note",
+      number      = "2012/181",
+      year        = "2012"
+}
+
+@article{Hocker:2007ht,
+      author         = "Hocker, Andreas and Stelzer, J. and Tegenfeldt, F. and
+                        Voss, H. and Voss, K. and others",
+      title          = "{TMVA - Toolkit for Multivariate Data Analysis}",
+      journal        = "PoS",
+      volume         = "ACAT",
+      pages          = "040",
+      year           = "2007",
+      eprint         = "physics/0703039",
+      archivePrefix  = "arXiv",
+      primaryClass   = "PHYSICS",
+      reportNumber   = "CERN-OPEN-2007-007",
+      SLACcitation   = "%%CITATION = PHYSICS/0703039;%%",
+}
+
+@article{sphericity,
+  title = {Statistical Model for Electron-Positron Annihilation into Hadrons},
+  author = {Bjorken, James D. and Brodsky, Stanley J.},
+  journal = {Phys. Rev. D},
+  volume = {1},
+  pages = {1416},
+  year = {1970},
+  doi = {10.1103/PhysRevD.1.1416},
+  publisher = {American Physical Society}
+}
+
+@article{FoxWolfram,
+      author         = "Fox, Geoffrey C. and Wolfram, Stephen",
+      title          = "{Event Shapes in $e^{+} e^{-}$ Annihilation}",
+      journal        = "Nucl. Phys. B",
+      volume         = "149",
+      pages          = "413",
+      doi            = "10.1016/0550-3213(79)90003-8",
+      year           = "1979",
+      reportNumber   = "CALT-68-678",
+      SLACcitation   = "%%CITATION = NUPHA,B149,413;%%",
+}
+
+@misc{JESJetMET,
+      title = {Jet Energy Scale Uncertainties},
+      howpublished = {\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookJetEnergyCorrections}}
+}
+
+@misc{JERJetMET,
+      title = {Jet Energy Resolution Uncertainties},
+      howpublished = {\url{https://twiki.cern.ch/twiki/bin/view/CMS/JetResolution}}
+}
+
+@misc{Q2-REWEIGHT-PRESENTATION,
+      author      = "T. Peiffer.",
+      title = "{Q$^2$ Systematic MC Samples re-weighting}",
+      type = "Presentation",
+      year = "2012",
+      howpublished = {\url{https://indico.cern.ch/getFile.py/access?contribId=5&resId=0&materialId=slides&confId=177717}}
+}
+
+@Unpublished{kfactor,
+     author    = "Axel Bredenstein and Ansgar Denner and Stefan Dittmaier and Stefano Pozzorini",
+     title     = "{NLO QCD corrections to top anti-top bottom anti-bottom production at the LHC: 2. full hadronic results}",
+     eprint    = "1001.4006",
+     archivePrefix = "arXiv",
+     primaryClass  =  "hep-ph",
+     year = "2010",
+     SLACcitation  = "%%CITATION = 1012.4031;%%"
+}
