first draft of analysis 1 chapter, first 5.1 fb of 8 TeV data

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -8,6 +8,9 @@
 \usepackage{tocbibind}
 \usepackage{lineno}
 \usepackage{definitions}
+\usepackage{amssymb}
+\usepackage{rotating}
+\usepackage{multirow}
 \usepackage[nomain,acronym,toc,nopostdot,nonumberlist]{glossaries}
 \usepackage[pdftex,pdftitle={Dissertation},pdfauthor={John Garland Wood}]{hyperref}
 \usepackage{chngpage} 
@@ -40,6 +43,7 @@
 \input{lhc_description.tex}
 \input{cms_description.tex}
 \input{reconstruction.tex}
+\input{analysis_8TeV_5p1fb.tex}
 
 \bibliographystyle{lucas_unsrt}
 \bibliography{dissertation}
