--- a/definitions.sty
+++ b/definitions.sty
@@ -100,6 +100,8 @@
 \newcommand{\ttbar} {\ensuremath{t{\bar{t}}}}
 \newcommand{\ttjets} {\ensuremath{t{\bar{t}}+jets}}
 \newcommand{\ttbb}  {\ensuremath{t{\bar{t}}+b{\bar{b}}}}
+\newcommand{\ttb}  {\ensuremath{t{\bar{t}}+b}}
+\newcommand{\ttcc}  {\ensuremath{t{\bar{t}}+c{\bar{c}}}}
 \newcommand{\ttlf}  {\ensuremath{t{\bar{t}}+lf}}
 
 \newcommand{\ttW}{\ensuremath{t{\bar{t}}W}}
