--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1410,3 +1410,88 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
      year = "2010",
      SLACcitation  = "%%CITATION = 1012.4031;%%"
 }
+
+@techreport{CMS-NOTE-2011-005,
+      title         = "{Procedure for the LHC Higgs boson search combination in
+                       Summer 2011}",
+      institution   = "CERN",
+      collaboration = "The ATLAS Collaboration, The CMS Collaboration, The LHC
+                       Higgs Combination Group",
+      address       = "Geneva",
+      number        = "CMS-NOTE-2011-005. ATL-PHYS-PUB-2011-11",
+      month         = "Aug",
+      year          = "2011",
+}
+
+@article{Cowan:2010js,
+      author         = "Cowan, Glen and Cranmer, Kyle and Gross, Eilam and
+                        Vitells, Ofer",
+      title          = "{Asymptotic formulae for likelihood-based tests of new
+                        physics}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C71",
+      pages          = "1554",
+      doi            = "10.1140/epjc/s10052-011-1554-0,
+                        10.1140/epjc/s10052-013-2501-z",
+      year           = "2011",
+      eprint         = "1007.1727",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.data-an",
+      SLACcitation   = "%%CITATION = ARXIV:1007.1727;%%",
+}
+
+@article{Chatrchyan:2013yea,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Search for the standard model Higgs boson produced in
+                        association with a top-quark pair in pp collisions at the
+                        LHC}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "1305",
+      pages          = "145",
+      doi            = "10.1007/JHEP05(2013)145",
+      year           = "2013",
+      eprint         = "1303.0763",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-HIG-12-035, CERN-PH-EP-2013-027",
+      SLACcitation   = "%%CITATION = ARXIV:1303.0763;%%",
+}
+
+
+@techreport{CMS-PAS-TOP-12-027,
+ author = "{CMS Collaboration}",
+ collaboration = "CMS",
+ title = "Measurement of the differential top-quark pair production cross section in the lepton+jets channel in pp collisions at $\sqrt{7}$ = 8 TeV.",
+ type = "CMS PAS",
+ number = "TOP-12-027",
+ year = "2012",
+ }
+
+@techreport{CMS-PAS-TOP-12-028,
+ author = "{CMS Collaboration}",
+ collaboration = "CMS",
+ title = "Measurement of the differential top-quark pair production cross section in the dilepton channel in pp collisions at $\sqrt{7}$ = 8 TeV.",
+ type = "CMS PAS",
+ number = "TOP-12-028",
+ year = "2012",
+ }
+
+
+@TECHREPORT{CMS-AN-2013-130,
+      AUTHOR      = "{CMS Collaboration}",
+      TITLE       = "Calibration of the Combined Secondary Vertex b-Tagging discriminant using dileptonic ttbar and Drell-Yan events",
+      URL         = "http://cms.cern.ch/iCMS/jsp/db\_notes/noteInfo.jsp?cmsnoteid=CMS\%20AN-2013/130",
+      TYPE     = "CMS Note",
+      NUMBER      = "2013/130",
+      YEAR        = "2013"
+}
+
+@techreport{CMS-AN-12-389,
+ author = "{CMS Collaboration}",
+ collaboration = "CMS",
+ title = "Dilepton trigger and lepton identification efficiencies for the top quark pair production cross section measurement at 8 TeV in the dilepton decay channel.",
+ type = "CMS AN",
+ number = "AN-12-389",
+ year = "2012",
+ }
