updated analysis 2: full 19.4 fb chapter

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -44,6 +44,7 @@
 \input{cms_description.tex}
 \input{reconstruction.tex}
 \input{analysis_8TeV_5p1fb.tex}
+\input{analysis_8TeV_19p4fb.tex}
 
 \bibliographystyle{lucas_unsrt}
 \bibliography{dissertation}
