analysis improvements chapter draft

--- a/definitions.sty
+++ b/definitions.sty
@@ -95,21 +95,21 @@
 %
 % Particles and Processes
 %
-\newcommand{\ttH}    {\ensuremath{t{\bar{t}}H}}
+\newcommand{\ttH}    {\ensuremath{t{\bar{t}}H}~}
 
-\newcommand{\ttbar} {\ensuremath{t{\bar{t}}}}
-\newcommand{\ttjets} {\ensuremath{t{\bar{t}}+jets}}
-\newcommand{\ttbb}  {\ensuremath{t{\bar{t}}+b{\bar{b}}}}
-\newcommand{\ttb}  {\ensuremath{t{\bar{t}}+b}}
-\newcommand{\ttcc}  {\ensuremath{t{\bar{t}}+c{\bar{c}}}}
-\newcommand{\ttlf}  {\ensuremath{t{\bar{t}}+lf}}
+\newcommand{\ttbar} {\ensuremath{t{\bar{t}}}~}
+\newcommand{\ttjets} {\ensuremath{t{\bar{t}}+jets}~}
+\newcommand{\ttbb}  {\ensuremath{t{\bar{t}}+b{\bar{b}}}~}
+\newcommand{\ttb}  {\ensuremath{t{\bar{t}}+b}~}
+\newcommand{\ttcc}  {\ensuremath{t{\bar{t}}+c{\bar{c}}}~}
+\newcommand{\ttlf}  {\ensuremath{t{\bar{t}}+lf}~}
 
-\newcommand{\ttW}{\ensuremath{t{\bar{t}}W}}
-\newcommand{\ttZ}{\ensuremath{t{\bar{t}}Z}}
+\newcommand{\ttW}{\ensuremath{t{\bar{t}}W}~}
+\newcommand{\ttZ}{\ensuremath{t{\bar{t}}Z}~}
 
-\newcommand{\bbbar}{\ensuremath{b{\bar{b}}}}
+\newcommand{\bbbar}{\ensuremath{b{\bar{b}}}~}
 
-\newcommand{\pp}{$pp$}
+\newcommand{\pp}{$pp$~}
 
 
 \endinput
