analysis improvements chapter draft

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1495,3 +1495,91 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
  number = "AN-12-389",
  year = "2012",
  }
+
+
+@article{Khachatryan:2014qaa,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Search for the associated production of the Higgs boson
+                        with a top-quark pair}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "1409",
+      pages          = "087",
+      doi            = "10.1007/JHEP09(2014)087, 10.1007/JHEP10(2014)106",
+      year           = "2014",
+      eprint         = "1408.1682",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-HIG-13-029, CERN-PH-EP-2014-189",
+      SLACcitation   = "%%CITATION = ARXIV:1408.1682;%%",
+}
+
+@article{Alwall:2014hca,
+      author         = "Alwall, J. and Frederix, R. and Frixione, S. and Hirschi,
+                        V. and Maltoni, F. and others",
+      title          = "{The automated computation of tree-level and
+                        next-to-leading order differential cross sections, and
+                        their matching to parton shower simulations}",
+      journal        = "JHEP",
+      volume         = "1407",
+      pages          = "079",
+      doi            = "10.1007/JHEP07(2014)079",
+      year           = "2014",
+      eprint         = "1405.0301",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2014-064, CP3-14-18, LPN14-066, MCNET-14-09,
+                        ZU-TH-14-14",
+      SLACcitation   = "%%CITATION = ARXIV:1405.0301;%%",
+}
+
+
+@article{Artoisenet:2012st,
+      author         = "Artoisenet, Pierre and Frederix, Rikkert and Mattelaer,
+                        Olivier and Rietkerk, Robbert",
+      title          = "{Automatic spin-entangled decays of heavy resonances in
+                        Monte Carlo simulations}",
+      journal        = "JHEP",
+      volume         = "1303",
+      pages          = "015",
+      doi            = "10.1007/JHEP03(2013)015",
+      year           = "2013",
+      eprint         = "1212.3460",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "NIKHEF-2012-021, CERN-PH-TH-2012-329",
+      SLACcitation   = "%%CITATION = ARXIV:1212.3460;%%",
+}
+
+@article{Sjostrand:2007gs,
+      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+                        Z.",
+      title          = "{A Brief Introduction to PYTHIA 8.1}",
+      journal        = "Comput.Phys.Commun.",
+      volume         = "178",
+      pages          = "852-867",
+      doi            = "10.1016/j.cpc.2008.01.036",
+      year           = "2008",
+      eprint         = "0710.3820",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-LCGAPP-2007-04, LU-TP-07-28,
+                        FERMILAB-PUB-07-512-CD-T",
+      SLACcitation   = "%%CITATION = ARXIV:0710.3820;%%",
+}
+
+@article{Frederix:2012ps,
+      author         = "Frederix, Rikkert and Frixione, Stefano",
+      title          = "{Merging meets matching in MC@NLO}",
+      journal        = "JHEP",
+      volume         = "1212",
+      pages          = "061",
+      doi            = "10.1007/JHEP12(2012)061",
+      year           = "2012",
+      eprint         = "1209.6215",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2012-247, ZU-TH-21-12",
+      SLACcitation   = "%%CITATION = ARXIV:1209.6215;%%",
+}
+
