analysis improvements chapter draft

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -45,6 +45,7 @@
 \input{reconstruction.tex}
 \input{analysis_8TeV_5p1fb.tex}
 \input{analysis_8TeV_19p4fb.tex}
+\input{analysis_improvements.tex}
 
 \bibliographystyle{lucas_unsrt}
 \bibliography{dissertation}
